progtool/styles/styles.scss
$sidebar-width: 200px;
$selection-background-color: #FAA;
$selection-foreground-color: #800;

#root {
  max-width: 1280px;
  margin: 0 auto;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

#sidebar {
  height: 100%;
  width: $sidebar-width;
  position: fixed;
  top: 0;
  left: 0;
  overflow-x: hidden;
  user-select: none;
  cursor: pointer;
}

#main-view-container {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;

  #main-view {
    width: 100%;
    height: 100vh;
    max-width: 800px;
    padding: 0.5em;

    & > h1 {
      margin: 0;
      background: #000;
      padding: 0.25em;
    }
  }
}

a {
  text-decoration: none;
  color: black;
}

.overview-root-container {
  .overview-section-children-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: stretch;
  }

  .overview-entry {
    & > .overview-entry-header {
      display: flex;
      flex-direction: column;
      justify-content: start;
      align-items: stretch;
      margin: 0;
      text-align: center;
    }

    a {
      font-weight: 100;
      font-size: 1rem;
    }

    &.selected {
      & > .overview-entry-header {
        background: $selection-background-color;

        & > a {
          color: $selection-foreground-color;
          font-weight: 600;
        }
      }
    }

    &.section {
      border-left: #daacff 4px solid;
      margin: 2px 0 0 4px;
      background: #daacff;

      & > .overview-entry-header {
        margin: 0;
      }

      & .section-children {
        overflow: hidden;
      }

      &.expanded {
        & > .section-children {
          display: block;
        }
      }

      &.collapsed {
        & > .section-children {
          display: none;
        }
      }
    }

    &.explanation {
      background: #AAD;
    }

    &.exercise {
      background: #ACA;
    }
  }
}

.admonition {
  border-radius: 10px;
  padding: 0.75em 1em;
  width: 80%;
  margin: 1em auto;

  .admonition-header > h1 {
    user-select: none;
    cursor: default;
    margin: 0;
    display: flex;
    flex-direction: row;
    justify-content: start;
    align-items: center;

    & .admonition-symbol {
      margin-right: 0.5em;
      transform: scale(1.5);

      g {
        stroke: white;
        fill: white;
      }
    }
  }

  &.warning {
    background: #F44;
  }

  &.hint {
    background: mediumpurple;
  }

  &.video {
    background: darkslategray;
  }

  &.question {
    background: peru;
  }

  &.task {
    background: royalblue;
  }

  &.info {
    background: darkgreen;
  }
}

.usage {
  position: relative;
  background: black;
  width: 75%;
  margin: 1em auto;

  & > header {
    position: absolute;
    padding: 0.25em 0.5em;
    right: 0;

    & > h1 {
      margin: 0;
      font-size: 0.75rem;
      text-align: right;
      font-weight: 200;
    }
  }
}

pre code.hljs {
  display: block;
  overflow-x: auto;
  padding: 1em;
  padding: 3px 5px;
  background: #000;
  color: #f8f8f8;

  .hljs-comment,.hljs-meta,.hljs-quote {
    color: #7c7c7c;
  }

  .hljs-keyword,.hljs-name,.hljs-selector-tag,.hljs-tag {
    color: #96cbfe;
  }

  .hljs-attribute,.hljs-selector-id {
    color: #ffffb6;
  }

  .hljs-addition,.hljs-selector-attr,.hljs-selector-pseudo,.hljs-string {
    color: #a8ff60;
  }

  .hljs-subst {
    color: #daefa3;
  }

  .hljs-link,.hljs-regexp {
    color: #e9c062;
  }

  .hljs-doctag,.hljs-section,.hljs-title,.hljs-type {
    color: #ffffb6;
  }

  .hljs-bullet,.hljs-literal,.hljs-symbol,.hljs-template-variable,.hljs-variable {
    color: #c6c5fe;
  }

  .hljs-deletion,.hljs-number {
    color: #ff73fd;
  }

  .hljs-emphasis {
    font-style: italic;
  }

  .hljs-strong {
    font-weight: 700;
  }
}

